# caddy_full_stack

./: .gitignore  Caddyfile  README.md  docker-compose.yml
.github/workflows/: django.yml  docker-image.yml  node-js.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/api/: settings.py  urls.py
backend/blog/: models.py  serializers.py  tests.py  urls.py  views.py
backend/blog/migrations/: 0001_initial.py
frontend/: .dockerignore  Dockerfile  index.html  package.json
frontend/public/: site.webmanifest
frontend/src/: App.jsx  App.test.jsx
frontend/src/api/: client.js  index.ts
frontend/src/api/models/: Blog.ts  PatchedBlog.ts
frontend/src/api/services/: BlogService.ts  PingService.ts
frontend/src/components/: BlogDetail.jsx  BlogForm.jsx  BlogList.jsx  Header.jsx  LoginForm.jsx
frontend/src/hooks/: useBlog.js
frontend/src/utils/: formatDate.js
